# pypi-lazyzip

./: Cargo.toml  README.md  lazyzip.py
src/: cli.rs  main.rs  pkg_name.rs  pypi.rs  python_pkg.rs  simple_repo_api.rs
src/python_pkg/: dependency.rs  package_name.rs  wheel_filename.rs
src/simple_repo_api/: spec.rs
