[package]
name = "pypi-lazyzip"
version = "0.1.0"
edition = "2021"

[dependencies]
async_zip = { version = "0.0.17", features = ["tokio"] }
color-eyre = "0.6.3"
either = { version = "1.13.0", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json", "http2"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros"] }
