[package]
name = "pypi-lazyzip"
version = "0.1.0"
edition = "2021"

[dependencies]
async_http_range_reader = "0.9.1"
async_zip = { git = "https://github.com/charliermarsh/rs-async-zip", rev = "c909fda63fcafe4af496a07bfda28a5aae97e58d", features = ["deflate", "tokio"] }
color-eyre = "0.6.3"
either = { version = "1.13.0", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json", "http2"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros"] }
