[package]
name = "pypi-lazyzip"
version = "0.1.0"
edition = "2021"

[dependencies]
async_http_range_reader = "0.9.1"
async_zip = { git = "https://github.com/charliermarsh/rs-async-zip", rev = "c909fda63fcafe4af496a07bfda28a5aae97e58d", features = ["deflate", "tokio"] }
caseless = "0.2.2"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
either = { version = "1.13.0", features = ["serde"] }
pep440_rs = "0.7.3"
regex = "1.11.1"
reqwest = { version = "0.12.7", features = ["json", "http2"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_with = { version = "3.12.0", default-features = false, features = ["macros"]}
tokio = { version = "1.40.0", features = ["macros"] }
